--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "file-meta micro service",
   "main": "index.js",
   "scripts": {
-    "start": "index.js"
+    "start": "node index.js"
   },
   "author": "shaw",
   "license": "ISC",
